@@ -1,6 +1,6 @@
 xdx - tcp/ip DX-cluster and ON4KST chat client for Amateur Radio
 ================================================================
- 
+
 Xdx is a DX-cluster client which shows a list with DX announcements and a
 separate text widget with WWV, WCY, 'To ALL' and other server messages.
 It is also suited to connect to ON4KST chat.
@@ -11,9 +11,9 @@ A DX Cluster is a means for Amateur (Ham) Radio operators to tell each other,
 in realtime, about DX stations (interesting or rare Amateur Radio stations
 from all over the world).
 
-Users who are connected to a DX Cluster are capable of announcing DX spots 
-and related announcements, send personal talk messages, send and receive mail 
-messages, search and retrieve archived data, and access data from information 
+Users who are connected to a DX Cluster are capable of announcing DX spots
+and related announcements, send personal talk messages, send and receive mail
+messages, search and retrieve archived data, and access data from information
 databases.
 
 For a list of DX Clusters see:
@@ -81,17 +81,25 @@ Hamlib support
 When double clicking on a dxspot in the top window this will set your rig's
 frequency. You need the rigctl binary from the hamlib distribution for this.
 Please modify the ID for your rig in the rigctl command line in preferences
-dialog, e.g. 'rigctl -m 210 set_freq %d' will use ID 210 (Kenwood TS-870),
-see 'rigctl ---list' for a list of models.
+dialog, e.g. 'rigctl -m 210 -r /dev/rig set_freq %d' will use ID 210
+(Kenwood TS-870), see 'rigctl ---list' for a list of models.
 
 Web browsers and mail programs
 ==============================
-A URL in the chat window will appear blue and underlined when your mouse is 
-over it. Clicking on it will open the link in your preferred browser or mail 
+A URL in the chat window will appear blue and underlined when your mouse is
+over it. Clicking on it will open the link in your preferred browser or mail
 program (see the preferences dialog):
 
 Start the gnome web-browser when clicking a URL: 'epiphany %s'.
 Start mozilla-mail on clicking a mail URL: 'mozilla -compose "to=%s"'.
+
+By default the browser and email apps are not set in the preferences dialog.
+Leaving them blank will cause your preferred desktop apps to be run to
+handle these URIs.  In some cases it may be necessary to check the desktop
+configuration for preferred applications.  If that fails, it may be necessary
+to manually edit ~/.local/share/applications/mimeapps.list to force your
+preferences to be honored.  This change is due to changes in GTK+ 2.24 which
+made the previous way of handling URIs obsolete.
 
 Highlights
 ==========
@@ -101,7 +109,7 @@ in all of the incoming text. When not used, only the text after the prompt is
 searched. Colors for the highlights are configured in page 3 of the settings
 dialog. You can quickly turn checkboxes on/off with Ctrl-1 to Ctrl-8, you
 can switch between entries with Alt-1 to Alt-8. Alt-0 switches back to the
-send widget. 
+send widget.
 
 Sound support
 =============
@@ -109,7 +117,8 @@ When a highlight is active in the chat window, a sound can be played.
 In order for the sound to work you must use a secondary program and
 set it in the first page of the preferences dialog: 'play %s' will use
 play, which is part of the sox package, 'esdplay %s' uses esdplay which
-is useful when using gnome and esound.
+is useful when using gnome and esound.  'aplay %s' uses aplay which
+is from the ALSA utilities.
 
 Smileys
 =======
