@@ -106,8 +106,8 @@ loadpreferences (void)
   preferences.savewx = 0;
   preferences.hamlib = 0;
   preferences.rigctl = g_strdup("rigctl -m 1 -r /dev/rig set_freq %d");;
-  preferences.browserapp = g_strdup("firefox -new-tab %s");
-  preferences.mailapp = g_strdup("evolution mailto:%s");
+  preferences.browserapp = g_strdup("?");
+  preferences.mailapp = g_strdup("?");
   preferences.soundapp = g_strdup("play %s");
   preferences.col0visible = 1;
   preferences.col1visible = 1;
